<resources>
    <string name="app_name">Hope</string>
    <string name="church_name">GPdI House of Prayer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="btnMasuk">Masuk</string>
    <string name="btnBuatAkun">Buat Akun</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="input_email">Email</string>
    <string name="information_forgotpassword">Masukkan email anda untuk menerima link reset password</string>
    <string name="btnKirim">Kirim</string>
    <string name="information_emailreceived">Check kotak masuk dan klik pada link yang sudah diberikan</string>
    <string name="btnSelesai">Selesai</string>
    <string name="namapengguna">Phillip Tothalove Chrisyuono</string>
    <string name="isinomortelefon">087759655356</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jadwalibadah">Jadwal Ibadah</string>
    <string name="logout">Logout</string>
    <string name="logout_dialog">Apakah anda yakin untuk keluar?</string>
    <string name="nomortelefon">No Telepon</string>
    <string name="tanggallahir">Tgl Lahir</string>
    <string name="isitanggallahir">03-01-2001</string>
    <string name="alamat">Alamat</string>
    <string name="isialamat">Perumahan Griya Indah Blok P-11 Jombang</string>
    <string name="jeniskelamin">Jenis Kelamin</string>
    <string name="isijeniskelamin">Laki - Laki</string>
    <string name="isipassword">***************</string>
    <string name="btnSimpan">Simpan</string>
    <string name="btnGantiProfile">Ganti Profile</string>
    <string name="profile">Profile</string>
    <string name="scanqr">Scan QR</string>
    <string name="jadwalpelayan">Jadwal Pelayan</string>
    <string name="registrasiibadah">Registrasi Ibadah</string>
    <string name="doaraya">Doa Raya</string>
    <string name="jadwaldoaraya">Rabu, 27 Oktober 2021 - 18.00</string>
    <string name="daftarpelayan">Daftar Pelayan</string>
    <string name="pelayanfirman">Firman Tuhan :</string>
    <string name="isipelayanfirman">Pdt. Petrus Harianto</string>
    <string name="pelayanpujian">WL dan Singer : </string>
    <string name="isipelayanpujian">Bpk Bayu, Ibu Ledi, Sdr Vava, Bpk Ipung</string>
    <string name="pelayanmusik">Tim Musik : </string>
    <string name="isipelayanmusik">Sdr Yonathan, Sdr Jeri, Sdr Yosia, Sdr Rico, Sdr Vito</string>
    <string name="pelayanballet">Tim Ballet : </string>
    <string name="isipelayanballet">Sdri Lian, Sdri Angel, Sdri Lala</string>
    <string name="yakinmaubatal">Apakah anda yakin membatalkan registrasi ini?</string>
    <string name="detailregistrasi">Detail Registrasi</string>
    <string name="namaygterdaftar">Nama yang terdaftar</string>
    <string name="btnBatalkan">Batalkan</string>
    <string name="editsesiibadah">Edit Sesi Ibadah</string>
    <string name="tulisannamaibadah">Nama Ibadah : </string>
    <string name="tulisanharitanggal">Hari dan Tanggal : </string>
    <string name="tulisanjam">Jam : </string>
    <string name="jamdoaraya">18.00</string>
    <string name="haritanggaldoaraya">Rabu, 27 Oktober 2021</string>
    <string name="btnEdit">Edit</string>
    <string name="jumlahjemaatterdaftar">Jumlah Jemaat Terdaftar</string>
    <string name="daftarnamajemaat">Daftar Nama Jemaat Terdaftar</string>
    <string name="btnTambahIbadah">Tambah Ibadah</string>
    <string name="daftarjemaat">Daftar Jemaat</string>
    <string name="konfirmasicheckin">Konfirmasi Check In</string>
    <string name="totaljemaat">Total Jemaat Hadir</string>
    <string name="jumlahjemaathadir">0 / 100</string>
    <string name="inpusuhu">Input Suhu</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_berhasil">Logout Berhasil</string>
</resources>